// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.not.toContainValue > fails when given object contains array value 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toContainValue([22m[32mexpected[39m[2m)[22m

Expected object to not contain value:
  [32mArray [
  Object {
    \\"hello\\": \\"world\\",
  },
][39m
Received:
  [31mObject {
  \\"message\\": Array [
    Object {
      \\"hello\\": \\"world\\",
    },
  ],
}[39m"
`;

exports[`.not.toContainValue > fails when given object contains object value 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toContainValue([22m[32mexpected[39m[2m)[22m

Expected object to not contain value:
  [32mObject {
  \\"hello\\": \\"world\\",
}[39m
Received:
  [31mObject {
  \\"message\\": Object {
    \\"hello\\": \\"world\\",
  },
}[39m"
`;

exports[`.not.toContainValue > fails when given object contains primitive value 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toContainValue([22m[32mexpected[39m[2m)[22m

Expected object to not contain value:
  [32m\\"world\\"[39m
Received:
  [31mObject {
  \\"hello\\": \\"world\\",
}[39m"
`;

exports[`.toContainValue > fails when given object does not contain array value 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toContainValue([22m[32mexpected[39m[2m)[22m

Expected object to contain value:
  [32mArray [
  Object {
    \\"world\\": \\"hello\\",
  },
][39m
Received:
  [31mObject {
  \\"message\\": Array [
    Object {
      \\"hello\\": \\"world\\",
    },
  ],
}[39m"
`;

exports[`.toContainValue > fails when given object does not contain object value 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toContainValue([22m[32mexpected[39m[2m)[22m

Expected object to contain value:
  [32mObject {
  \\"world\\": \\"hello\\",
}[39m
Received:
  [31mObject {
  \\"message\\": Object {
    \\"hello\\": \\"world\\",
  },
}[39m"
`;

exports[`.toContainValue > fails when given object does not contain primitive value 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toContainValue([22m[32mexpected[39m[2m)[22m

Expected object to contain value:
  [32m\\"hello\\"[39m
Received:
  [31mObject {
  \\"hello\\": \\"world\\",
}[39m"
`;
